library/general/sparkpodlabeling/samples/spark-pod-labeling/example_empty_job_id.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-pod-empty-job-id
  labels:
    spark-job-id: ""
    spark-role: "driver"
    app: "spark-app"
spec:
  serviceAccountName: "spark-driver-sa"
  containers:
    - name: spark-driver
      image: "spark/spark:3.4.0"
