library/general/sparkpodlabeling/samples/spark-pod-labeling/example_privileged_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-pod-privileged
  labels:
    spark-job-id: "job-123"
    spark-role: "driver"
    app: "spark-app"
spec:
  serviceAccountName: "spark-driver-sa"
  containers:
    - name: spark-driver
      image: "spark/spark:3.4.0"
      securityContext:
        privileged: true  # Not allowed for Spark pods
